fix-overflow

--- a/src/componentes/inicio/beneficios/Beneficios.css
+++ b/src/componentes/inicio/beneficios/Beneficios.css
@@ -14,7 +14,6 @@
   justify-content: center;
   align-items: center;
   width: 90%;
-  padding: 70px;
   gap: 15px;
 }
 @media screen and (max-width: 1390px) {
